# kiwi_edit

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  README_NEW.md  docker-compose.yml  pyproject.toml  requirements.txt  run_admin.py  run_bot.py
alembic/: env.py
alembic/versions/: 232dc9dff1c1_initial_schema.py
app/bot/: main.py
app/bot/handlers/: media.py  menu.py  search.py  start.py
app/bot/handlers/admin/: add_media.py  panel.py
app/bot/keyboards/: admin.py  default.py  inline.py
app/bot/middlewares/: logging.py  throttling.py  user.py
app/bot/states/: admin.py
app/core/: config.py
app/handlers/admin/: add_episode.py  admin_actions.py  edit_media.py  post_episode.py  staff.py
app/handlers/user/: search_anime.py  search_by_id.py  search_by_image.py  search_drama.py
app/infrastructure/cache/: decorator.py  redis_client.py
app/infrastructure/database/: session.py
app/infrastructure/database/models/: media.py  sponsor.py  user.py
app/infrastructure/repositories/: episode.py  media.py  user_repository.py
app/keyboards/admin/: inline_buttons.py
app/keyboards/user/: inline_buttons.py
app/services/: admin_service.py  broadcast.py  media_service.py  user_service.py
app/web/: main.py
app/web/api/v1/: api.py
app/workers/: worker.py
temp_old_version/bilmadim-main/: .gitignore  batafsil.md  config.py  init_db.py  main.py  requirements.txt
temp_old_version/bilmadim-main/app/database/: bot_base.py
temp_old_version/bilmadim-main/app/funcs/: functions.py  languages.py
tests/: test_media_service.py
(+10 files in other folders)
