[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "media-platform-bot"
version = "0.1.0"
description = "Scalable Telegram Media Platform Bot"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4"
sqlalchemy = "^2.0"
asyncpg = "^0.29"
pydantic-settings = "^2.2"
redis = "^5.0"
fastapi = "^0.109"
uvicorn = "^0.27"
alembic = "^1.13"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
